--- a/src/components/Choices/Choices.css
+++ b/src/components/Choices/Choices.css
@@ -29,7 +29,7 @@
 }
 
 .choices-container div span {
-   font-size: 3em;
+   font-size: 2.3vw;
 }
 
 .progress-bar-vertical {
@@ -52,7 +52,7 @@
    width: 100%;
    line-height: 1.2;
    top: 50%;
-   left: 70%;
+   left: 80%;
 
    transform: translate(-50%, -50%);
    color: rgb(109, 53, 53);
